welcome.lessons.welcome.array.array123.Array123.scala.error
array123:6: error: not found: value var1
    if(nums(i)==1){var1=1}
                   ^array123:7: error: not found: value var2
    if(nums(i)==2){var2=1}
                   ^array123:8: error: not found: value var3
    if(nums(i)==2){var3=1}
                   ^array123:10: error: not found: value var1
  if(var1+var2+var3==3){return true}
     ^array123:10: error: not found: value var2
  if(var1+var2+var3==3){return true}
          ^array123:10: error: not found: value var3
  if(var1+var2+var3==3){return true}
               ^