welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  var n1=0
  var n2=0
  var n3=0
  for(i<- 0 to nums.length-1){
    if(nums(i)==1){var1=1}
    if(nums(i)==2){var2=1}
    if(nums(i)==2){var3=1}
  }
  if(var1+var2+var3==3){return true}
  else{return false}
}